# bdiff

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  bdiff.c
.github/workflows/: build.yml  lint.yml  main.yml  stylecheck.yml
include/: buffer.h  file.h
src/: bdiff.c  buffer.c  file.c
